# claude-refactor-command

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  design_conversation.md  install.sh  plugin.json  pyproject.toml  refactor_issues.md  refactor_requirements.md
.claude/agents/: abstraction-enforcer.md  class-extractor.md  code-implementation.md  code-structure-analyzer.md  encapsulation-enforcer.md  extract-class.md  method-extractor.md  metrics-monitor.md  ownership-boundary-enforcer.md  refactor-orchestrator.md
.claude/commands/: jira-clone.md  refactor.md  refactor_code.md  summarize_standup.md  thb-flow.md  thb-update.md
.claude/skills/class-naming/: SKILL.md
.claude/skills/class-naming/examples/: csharp.md  python.md
.claude/skills/commit-message/: SKILL.md
.claude/skills/control-structure-skill/: control-structure-skill.md
.claude/skills/control-structure-skill/control-structure-skill-examples/: csharp.md  python.md
fathom_tool/: __init__.py  cli.py  client.py  config.py
jira_update/: __init__.py  cli.py  client.py  config.py  fix_links.py  latest_comment.py  link.py  migrate.py  read.py  sync_points.py  users.py
migrations/: hb-to-ha.yaml
scripts/: daily-slack-scan.sh
slack_postmortem/: __init__.py  cli.py  client.py  config.py  converter.py
slack_reminder/: __init__.py  cli.py  config.py  scanner.py
slack_scan/: __init__.py  cli.py  client.py  config.py
slack_update/: __init__.py  auth.py  channels.py  cli.py  client.py  config.py  users.py
sql_query/: RunQuery.java  __init__.py  cli.py  client.py  config.py
summary_publish/: __init__.py  cli.py  config.py  publisher.py
tests/: __init__.py  test_integration.py
