[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-update"
version = "0.1.0"
description = "CLI tools for Jira: update tickets and list users"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Helper Bees"}
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.scripts]
jira-update = "jira_update.cli:main"
jira-users = "jira_update.users:main"
jira-read = "jira_update.read:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jira_update*"]
