[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-update"
version = "0.1.0"
description = "CLI tools for Jira and Slack: update tickets, post messages, and list users"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Helper Bees"}
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.scripts]
jira-update = "jira_update.cli:main"
jira-users = "jira_update.users:main"
jira-read = "jira_update.read:main"
jira-latest-comment = "jira_update.latest_comment:main"
slack-update = "slack_update.cli:main"
slack-users = "slack_update.users:main"
slack-channels = "slack_update.channels:main"
slack-remind = "slack_reminder.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jira_update*", "slack_update*", "slack_reminder*"]
