[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-utils"
version = "0.1.0"
description = "CLI tools for Jira, Slack, Fathom, and more"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Helper Bees"}
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "markdownify>=0.11.0",
]

[project.scripts]
jira-update = "jira_update.cli:main"
jira-users = "jira_update.users:main"
jira-read = "jira_update.read:main"
jira-latest-comment = "jira_update.latest_comment:main"
jira-link = "jira_update.link:main"
jira-migrate = "jira_update.migrate:main"
jira-sync-points = "jira_update.sync_points:main"
jira-fix-links = "jira_update.fix_links:main"
slack-update = "slack_update.cli:main"
slack-users = "slack_update.users:main"
slack-channels = "slack_update.channels:main"
slack-remind = "slack_reminder.cli:main"
slack-history = "slack_scan.cli:main"
slack-postmortem = "slack_postmortem.cli:main"
fathom-transcripts = "fathom_tool.cli:main"
summary-publish = "summary_publish.cli:main"
run-query = "sql_query.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jira_update*", "slack_update*", "slack_postmortem*", "slack_reminder*", "slack_scan*", "fathom_tool*", "summary_publish*", "sql_query*"]

[tool.setuptools.package-data]
sql_query = ["RunQuery.java"]
